Progress bar implemented and visually pleasing